apps/base/it-tools/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  namespace: it-tools
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tools.plutolab.live`)
      kind: Rule
      services:
        - name: it-tools
          port: 80
  tls:
    secretName: plutolab-live-tls
